--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <h2>Post test</h2>
     <div class="result" id="post"></div>
+    <button onclick="postRequest()">Test POST</button>
 
     <script src="request.js"></script>
 
