--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <h1>Tester litt post og get requests med async await</h1>
 
     <h2>Get test</h2>
-    <div class="result" id="get"></div>
     <button onclick="getRequest()">Test Get</button>
+    <div class="result" id="get"></div>
 
     <h2>Post test</h2>
+    <button onclick="postRequest('ja')">Stem ja</button>
+    <button onclick="postRequest('nei')">Stem nei</button>
     <div class="result" id="post"></div>
-    <button onclick="postRequest()">Test POST</button>
 
     <script src="request.js"></script>
 
