--- a/hs.html
+++ b/hs.html
@@ -6,6 +6,8 @@
         <title>Highscore testing</title>
     </head>
     <body>
+        <h1>HighScore API Testing</h1>
+
         <h2>Get test</h2>
         <button onclick="getRequest()">Test Get</button>
         <div class="result" id="get_result"></div>
